--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -469,3 +469,49 @@ label {
     font-size: 18px;
   }
 }
+.btn-primary {
+  background: #1976d2;
+  color: white;
+  border-radius: 8px;
+  padding: 12px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: #1565c0;
+}
+.loader {
+  border: 4px solid #e3f2fd;
+  border-top: 4px solid #1976d2;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  animation: spin 0.8s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.btn-back {
+  background: #1976d2;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 8px 15px;
+  font-size: 15px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: 0.2s;
+}
+
+.btn-back:hover {
+  background: #1565c0;
+}
